--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "space_x",
+  "homepage": "https://sloebrich.github.io/spacex",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
