--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "uninstall": "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
